Fix sync button overflow

--- a/app/stylesheets/builtin-pages/dat-sidebar.less
+++ b/app/stylesheets/builtin-pages/dat-sidebar.less
@@ -83,7 +83,7 @@ h1 {
 
       .dropdown-btn-list {
         left: 0;
-        width: 177px;
+        width: 180px;
 
         .fa-cloud {
           color: @color-text--muted;
@@ -91,7 +91,13 @@ h1 {
       }
 
       .dropdown-item {
-        margin-left: -8px;
+        padding-left: 27px;
+        position: relative;
+
+        i:first-child {
+          position: absolute;
+          left: 10px;
+        }
 
         &:hover {
           background: @background-menu;
